@@ -12,10 +12,11 @@ import net.osgiliath.agentsdk.skills.parser.SkillScriptCommand;
 import net.osgiliath.agentsdk.skills.parser.SkillTemplate;
 import net.osgiliath.agentsdk.skills.parser.SkillRenderer;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
 
-import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -225,7 +226,7 @@ public class SkillsParsingSteps {
     public void aFullyParsedSkillWithAllComponents() {
         safely(() -> {
             skillFilePath = resolveFromProject(
-                "./src/test/resources/dataset/markdown/skills/sample-skill/SKILL.md");
+                "dataset/markdown/skills/sample-skill/SKILL.md");
             skill = skillParser.getSkill(skillFilePath);
         });
     }
@@ -339,27 +340,18 @@ public class SkillsParsingSteps {
     }
 
     private Path resolveFromProject(String relativePath) {
-        Path fromWorkDir = Path.of(relativePath);
+        try {
+            ClassPathResource resource = new ClassPathResource(relativePath);
+            if (resource.exists()) {
+                return resource.getFile().toPath().toAbsolutePath().normalize();
+            }
+        } catch (Exception e) {
+            // fall through
+        }
+
+        Path fromWorkDir = Paths.get(relativePath);
         if (Files.exists(fromWorkDir)) {
             return fromWorkDir.toAbsolutePath().normalize();
-        }
-        try {
-            var resource = getClass().getClassLoader().getResource(".");
-            if (resource != null) {
-                Path classesDir = Path.of(resource.toURI());
-                Path moduleRoot = classesDir.getParent().getParent().getParent().getParent();
-                Path candidate = moduleRoot.resolve(relativePath).normalize();
-                if (Files.exists(candidate)) {
-                    return candidate;
-                }
-                Path projectRoot = moduleRoot.getParent();
-                candidate = projectRoot.resolve(relativePath).normalize();
-                if (Files.exists(candidate)) {
-                    return candidate;
-                }
-            }
-        } catch (URISyntaxException e) {
-            // fall through
         }
         return fromWorkDir.toAbsolutePath().normalize();
     }
